# mistable

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  TESTING.md  pico_sdk_import.cmake
assets/sdroot/: VERSION.TXT  splash.raw
build_logs/: README.md  last_build_fail.txt
cmake/boards/: waveshare_rp2350_pizero.cmake
container/: Dockerfile
doc/SNAPSHOTS/: mist_snapshot_commit.txt  mist_snapshot_filelist.txt  mist_snapshot_sha256.txt
doc/TASKS/: 000_mist_cleanroom_extraction_rp2350_rtos.md  000_phase0_minimal_spine.md  001_container_first_runner.md  002_phase1_rp2350_pizero_appliance.md
rtl/: mistable_top.sv
scripts/: build.sh  codex_pr.sh  docker.sh  flash_uf2.txt  lint_forbidden.sh  lint_pins.sh  ninja  prep_sd.sh  test.sh
sim/: tb.cpp
src/: FreeRTOSConfig.h  board_pins.h  log.c  log.h  main.c  pico_compat.h  status.c  status.h
src/storage/: ff_port.c  ff_port.h  ffconf.h  sd_spi.c  sd_spi.h  splash.c  splash.h
src/usb/: hid_keyboard.c  hid_keyboard.h  piousb_host.pio  usb_device_cdc.c  usb_device_cdc.h  usb_host_piousb.c  usb_host_piousb.h
src/video/: font8x8.c  font8x8.h  osd.c  osd.h  patterns.c  patterns.h  scale.c  scale.h  tmds.pio  tmds_pio.c  tmds_pio.h  video_engine.c  video_engine.h
tools/: make_sd_image.py  make_splash.py  ninja_stub.py  verify_assets.py
